@@ -1,6 +1,7 @@
 # Generated by roxygen2 (4.1.0): do not edit by hand
 
 export(Admin1Choropleth)
+export(Choropleth)
 export(CountryChoropleth)
 export(CountyChoropleth)
 export(CountyZoomChoropleth)
@@ -16,6 +17,7 @@ export(county_choropleth)
 export(county_choropleth_acs)
 export(county_zoom_choropleth)
 export(get_acs_data)
+export(get_acs_df)
 export(state_choropleth)
 export(state_choropleth_acs)
 export(zip_map)
