@@ -1,0 +1,17 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/choropleth.R
+\docType{data}
+\name{Choropleth}
+\alias{Choropleth}
+\title{The base Choropleth object.}
+\format{\preformatted{Class 'R6ClassGenerator' <environment: 0x1090f2468> 
+ - attr(*, "name")= chr "Choropleth_generator"
+}}
+\usage{
+Choropleth
+}
+\description{
+The base Choropleth object.
+}
+\keyword{datasets}
+
